<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/oil_collection_logo"
        android:scaleType="matrix"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="180dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:visibility="gone"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/purple_grey_40"
            android:textColorHint="@color/purple_grey_40"/>

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/purple_grey_40"
            android:textColorHint="@color/purple_grey_40"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/purple_grey_40"
            android:textColorHint="@color/purple_grey_40"/>

        <Button
            android:id="@+id/auth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:backgroundTint="@color/purple_50"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? Create Account"
            android:textColor="@color/purple_grey_40"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="400dp">

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:layout_marginTop="16dp"/>
        </LinearLayout>



    </LinearLayout>
</RelativeLayout>

