<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InputFragment"
    android:padding="8dp">

    <TextView
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Current Date" />

    <TextView
        android:id="@+id/remaining_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="?attr/colorOnBackground"
        android:fontFamily="@font/"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/current_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Remaining Volume: 0L" />



    <EditText
        android:id="@+id/liters_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter liters"
        android:textSize="48sp"
        android:inputType="number"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/remaining_volume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/location_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Select location"
        android:textSize="35sp"
        android:textColor="?attr/colorOnBackground"
        android:textAlignment="center"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/liters_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/location_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />


    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add"
        android:textSize="35sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/location_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple_50"
        app:layout_constraintWidth_percent="0.8" />

    <FrameLayout
        android:id="@+id/dropdown_menu_frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/location_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
