...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/record_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Location"
                android:paddingStart="48dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/record_liters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Liters"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

...
