<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Test Location"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/location_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/location_name"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:visibility="gone"
            android:padding="0dp"
            android:layout_marginStart="8dp"
            android:textColorHint="@android:color/white"/>


        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_more_vert"
            android:contentDescription="Menu" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_edit"
            android:contentDescription="Edit"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_save"
            android:contentDescription="Save"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_delete"
            android:contentDescription="Delete"
            android:visibility="gone" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
